Version 1.1
===========

- Added a module which will contain the editors for the user management GUI.
  The first editor for creating new users is funtional. More are upcoming.
- Add a first version of the EventHandler to reorganized the store and search
  in the persitence layers.
- Add a SimpleWorkflow module to administrate the content objects in simple 
  form
- Refactoring the commandline tool. Now the commands are all extern defined.
  Add a simple help mechanism.
- MCRClassification methods where redesigned. This change require an update
  of all classifications to put them in an additional database table.
- Bugfix: (#1211852) WebSphere is able to track the session now
- MCRURIResolver now handles the 'query:' protocol to save http request to the
  MCRQueryServlet

Version 1.0
===========
- 2005/02/17 initial release
