@@ -14,6 +14,8 @@ Version 1.1
 - Bugfix: (#1211852) WebSphere is able to track the session now
 - MCRURIResolver now handles the 'query:' protocol to save http request to the
   MCRQueryServlet
+- Move the configuration from bin to the config directory.
+
 
 Version 1.0
 ===========
